--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "java.configuration.updateBuildConfiguration": "interactive",
-    "livePreview.defaultPreviewPath": "/src/main/webapp/_01_Named.xhtml"
+    "livePreview.defaultPreviewPath": "/src/main/webapp/_01_Named.xhtml",
+    "java.compile.nullAnalysis.mode": "automatic"
 }
