--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,13 @@
             <version>1.2</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/stereotype/stereotype -->
+        <dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <version>2.0-EDR2</version>
+        </dependency>
+        <!-- Thanks for using https://jar-download.com -->
 
 
         <!-- Import the JSF API, we use provided scope as the API is included in WildFly / JBoss EAP -->
